Describe logout logic
